# librxtx

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  create_symlinks  librxtxSerial.pc.in
examples/: Example.java
m4/: ax_check_java_home.m4
src/: I2CImp.c  RS485Imp.c  RXTXCommDriver.java  RawImp.c  SerialImp.c  portmode.c
src/gnu/io/: RXTXCommDriver.java
